added support for APP_NAME and APP_URL in build process to create specialized use case versions of Cleanium

--- a/Info.plist
+++ b/Info.plist
@@ -6,5 +6,10 @@
   <string>Cleanium</string>
   <key>CFBundleIconFile</key>
   <string>Icon</string>
+  <key>LSEnvironment</key>
+  <dict>
+    <key>APP_URL</key>
+    <string></string>
+  </dict>
 </dict>
 </plist>
